force-app/main/default/objects/Contact/fields/Address_Verification_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Address_Verification_Datetime__c</fullName>
    <description>If address(es) have been verified what is the datetime of that verification? Should be reset when any address is updated/deleted</description>
    <label>Address Verification Datetime</label>
    <type>DateTime</type>
</CustomField>