force-app/main/default/objects/Contact/fields/Balance_Currency__c.field-meta.xml
<CustomField>
    <fullName>Balance_Currency__c</fullName>
    <description>All currency Transactions total both credit and debit</description>
    <inlineHelpText>All currency Transactions total both credit and debit</inlineHelpText>
    <label>Balance Currency</label>
    <summarizedField>Transaction__c.Amount_Currency__c</summarizedField>
    <summaryForeignKey>Transaction__c.Donor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>