force-app/main/default/objects/Contact/fields/Balance_Points__c.field-meta.xml
<CustomField>
    <fullName>Balance_Points__c</fullName>
    <description>Total balance of loyalty points</description>
    <inlineHelpText>Total balance of loyalty points</inlineHelpText>
    <label>Balance Points</label>
    <summarizedField>Transaction__c.Amount_Points__c</summarizedField>
    <summaryForeignKey>Transaction__c.Donor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>