force-app/main/default/objects/Contact/fields/Date_Migrated__c.field-meta.xml
<CustomField>
    <fullName>Date_Migrated__c</fullName>
    <description>This is the date the donor was migrated into the CRM.</description>
    <inlineHelpText>This is the date the donor was migrated into the CRM.</inlineHelpText>
    <label>Date Migrated</label>
    <type>Date</type>
</CustomField>