force-app/main/default/objects/Contact/fields/Days_Until_Annum__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Annum__c</fullName>
    <description>The number of days until a donor&apos;s First Visit anniversary</description>
    <formula>First_Visit_Anniversary__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days until a donor&apos;s First Visit anniversary</inlineHelpText>
    <label>Days Until Annum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>