force-app/main/default/objects/Contact/fields/Days_until_Triannum__c.field-meta.xml
<CustomField>
    <fullName>Days_until_Triannum__c</fullName>
    <description>The number of days until a donor&apos;s next First Visit triannum (q4months)</description>
    <formula>MIN ( 
ABS(Trianniversary_1__c - TODAY()), ABS(Trianniversary_2__c - TODAY())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days until a donor&apos;s next First Visit triannum (q4months)</inlineHelpText>
    <label>Days until Triannum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>