force-app/main/default/objects/Contact/fields/Donations_Last_365_Days_Migrated__c.field-meta.xml
<CustomField>
    <fullName>Donations_Last_365_Days_Migrated__c</fullName>
    <description>The migrated data for total donations in the last 365 days for this donor.</description>
    <inlineHelpText>The migrated data for total donations in the last 365 days for this donor.</inlineHelpText>
    <label>Donations Last 365 Days Migrated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>