force-app/main/default/objects/Contact/fields/Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>Donor_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External Identifier for BECS/NexLynk Donor</description>
    <externalId>true</externalId>
    <label>Donor ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>