force-app/main/default/objects/Contact/fields/DonorId__c.field-meta.xml
<CustomField>
    <fullName>DonorId__c</fullName>
    <description>The external PK for donors in the BECS/NexLynk systems for person accounts</description>
    <externalId>true</externalId>
    <label>DonorId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>