force-app/main/default/objects/Contact/fields/Eligibility_Date__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Date__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <description>The date of a Donor&apos;s eligibility from BECS/NL; when a value is sent this is most likely the driver of the donor&apos;s soonest next visit date.</description>
    <inlineHelpText>The date of a Donor&apos;s eligibility from BECS/NL; when a value is sent this is most likely the driver of the donor&apos;s soonest next visit date.</inlineHelpText>
    <label>Next Visit Option BECS</label>
    <type>DateTime</type>
</CustomField>