force-app/main/default/objects/Contact/fields/Eligibility_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Datetime__c</fullName>
    <description>The date and time of a Donor&apos;s eligibility which is the point in time that the donor can make a donation.</description>
    <label>Eligibility Datetime</label>
    <type>DateTime</type>
</CustomField>