force-app/main/default/objects/Contact/fields/Enable_Appointment_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Enable_Appointment_Reminders__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates donor enabled appointment reminder notifications. Defaults to true.</description>
    <inlineHelpText>Indicates donor enabled appointment reminder notifications. Defaults to true.</inlineHelpText>
    <label>Enable Appointment Reminders</label>
    <type>Checkbox</type>
</CustomField>