force-app/main/default/objects/Contact/fields/Enable_Email__c.field-meta.xml
<CustomField>
    <fullName>Enable_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates donor enabled Email communications as a preferred channel.</description>
    <inlineHelpText>Indicates donor enabled Email communications as a preferred channel.</inlineHelpText>
    <label>Enable Email</label>
    <type>Checkbox</type>
</CustomField>