force-app/main/default/objects/Contact/fields/Enable_Mobile_Push__c.field-meta.xml
<CustomField>
    <fullName>Enable_Mobile_Push__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates donor enabled mobile push communications as a preferred channel. Defaults to true, as this is the default communication method for donors.</description>
    <inlineHelpText>Indicates donor enabled mobile push communications as a preferred channel. Defaults to true, as this is the default communication method for donors.</inlineHelpText>
    <label>Enable Mobile Push</label>
    <type>Checkbox</type>
</CustomField>