force-app/main/default/objects/Contact/fields/Enable_Payment_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Enable_Payment_Notifications__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates donor enabled payment notifications. Defaults to true.</description>
    <inlineHelpText>Indicates donor enabled payment notifications. Defaults to true.</inlineHelpText>
    <label>Enable Payment Notifications</label>
    <type>Checkbox</type>
</CustomField>