force-app/main/default/objects/Contact/fields/Enable_SMS__c.field-meta.xml
<CustomField>
    <fullName>Enable_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates donor enabled SMS communications as a preferred channel.</description>
    <inlineHelpText>Indicates donor enabled SMS communications as a preferred channel.</inlineHelpText>
    <label>Enable SMS</label>
    <type>Checkbox</type>
</CustomField>