force-app/main/default/objects/Contact/fields/First_Donation__c.field-meta.xml
<CustomField>
    <fullName>First_Donation__c</fullName>
    <description>The first Visit for this donor which resulted in a successful Donation</description>
    <inlineHelpText>The first Visit for this donor which resulted in a successful Donation</inlineHelpText>
    <label>First Donation</label>
    <summarizedField>Visit__c.Appointment_Datetime__c</summarizedField>
    <summaryFilterItems>
        <field>Visit__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Visit__c.Donation_Volume__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Visit__c.Donor__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>