force-app/main/default/objects/Contact/fields/First_Visit__c.field-meta.xml
<CustomField>
    <fullName>First_Visit__c</fullName>
    <description>The first Visit for this donor no matter whether it was a successful Donation or not.</description>
    <inlineHelpText>The first Visit for this donor no matter whether it was a successful Donation or not.</inlineHelpText>
    <label>First Visit</label>
    <summarizedField>Visit__c.Appointment_Datetime__c</summarizedField>
    <summaryFilterItems>
        <field>Visit__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Visit__c.Donor__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>