force-app/main/default/objects/Contact/fields/First_Visit_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>First_Visit_Anniversary__c</fullName>
    <description>First Visit anniversary date</description>
    <formula>DATE(
YEAR (DATEVALUE(First_Visit__c)) + (FLOOR((TODAY() - DATEVALUE(First_Visit__c)) / 365)  + 1),
MONTH(DATEVALUE(First_Visit__c)),
IF(AND(DAY(DATEVALUE(First_Visit__c)) = 29,MONTH(DATEVALUE(First_Visit__c) ) = 02) , 28, DAY(DATEVALUE(First_Visit__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Visit Anniversary</label>
    <type>Date</type>
</CustomField>