force-app/main/default/objects/Contact/fields/hasValidPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>hasValidPaymentMethod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag will be set/unset by the PaymentService when processing Payment information.</description>
    <label>Has Valid Payment Method?</label>
    <type>Checkbox</type>
</CustomField>