force-app/main/default/objects/Contact/fields/hasViewedIntroVideo__c.field-meta.xml
<CustomField>
    <fullName>hasViewedIntroVideo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks if Donor has viewed an intro video</description>
    <label>Has Viewed Intro Video</label>
    <type>Checkbox</type>
</CustomField>