force-app/main/default/objects/Contact/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <description>Height in inches of measurement</description>
    <inlineHelpText>Height inches</inlineHelpText>
    <label>Height</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>