force-app/main/default/objects/Contact/fields/How_will_you_get_to_the_Center__c.field-meta.xml
<CustomField>
    <fullName>How_will_you_get_to_the_Center__c</fullName>
    <label>How will you get to the Center?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transportation_Modes</valueSetName>
    </valueSet>
</CustomField>