force-app/main/default/objects/Contact/fields/isAddressesVerified__c.field-meta.xml
<CustomField>
    <fullName>isAddressesVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If all addresses for this PersonAccount have been verified then TRUE else FALSE; should be unchecked anytime any address is created/updated</description>
    <label>Addresses Verified?</label>
    <type>Checkbox</type>
</CustomField>