force-app/main/default/objects/Contact/fields/isEmailVerified__c.field-meta.xml
<CustomField>
    <fullName>isEmailVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Verified?</label>
    <type>Checkbox</type>
</CustomField>