force-app/main/default/objects/Contact/fields/isLastDonationGT6mo__c.field-meta.xml
<CustomField>
    <fullName>isLastDonationGT6mo__c</fullName>
    <formula>IF( ADDMONTHS( DATEVALUE(Last_Donation__c) , 6) &lt; TODAY(), true, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Donation &gt; 6mo?</label>
    <type>Checkbox</type>
</CustomField>