force-app/main/default/objects/Contact/fields/Last_Donation__c.field-meta.xml
<CustomField>
    <fullName>Last_Donation__c</fullName>
    <description>Last &apos;completed&apos; donation datetime</description>
    <label>Last Donation</label>
    <summarizedField>Visit__c.Donation_Complete__c</summarizedField>
    <summaryFilterItems>
        <field>Visit__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Visit__c.Donor__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>