force-app/main/default/objects/Contact/fields/Last_Donation_Date_Migrated__c.field-meta.xml
<CustomField>
    <fullName>Last_Donation_Date_Migrated__c</fullName>
    <description>Migrated data showing the last donation date for a donor.</description>
    <inlineHelpText>Migrated data showing the last donation date for a donor.</inlineHelpText>
    <label>Last Donation Date Migrated</label>
    <type>Date</type>
</CustomField>