force-app/main/default/objects/Contact/fields/Last_Onbe_Balance_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Onbe_Balance_Update__c</fullName>
    <label>Last Onbe Balance Update</label>
    <type>DateTime</type>
</CustomField>