force-app/main/default/objects/Contact/fields/Last_Physical_Exam_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Physical_Exam_Date__c</fullName>
    <description>Indicates the last date a donor had a physical exam. Updated from Visits with the Physical Exam checkbox checked.</description>
    <inlineHelpText>Indicates the last date a donor had a physical exam. Updated from Visits with the Physical Exam checkbox checked.</inlineHelpText>
    <label>Last Physical Exam Date</label>
    <type>Date</type>
</CustomField>