force-app/main/default/objects/Contact/fields/Last_Previous_Donation__c.field-meta.xml
<CustomField>
    <fullName>Last_Previous_Donation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The donation prior the Last Donation</description>
    <inlineHelpText>The donation prior to the Last Donation</inlineHelpText>
    <label>Last Previous Donation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Visit__c.Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filterItems>
        <filterItems>
            <field>Visit__c.Donation_Volume__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>