force-app/main/default/objects/Contact/fields/Last_Previous_Scheduled_Visit__c.field-meta.xml
<CustomField>
    <fullName>Last_Previous_Scheduled_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Previous Scheduled Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Contacts (Last Previous Scheduled Visit)</relationshipLabel>
    <relationshipName>ScheduledDonors</relationshipName>
    <type>Lookup</type>
</CustomField>