force-app/main/default/objects/Contact/fields/Last_Scheduled_Visit__c.field-meta.xml
<CustomField>
    <fullName>Last_Scheduled_Visit__c</fullName>
    <label>Last Scheduled Visit</label>
    <summarizedField>Visit__c.Appointment_Datetime__c</summarizedField>
    <summaryFilterItems>
        <field>Visit__c.Status__c</field>
        <operation>equals</operation>
        <value>New, Scheduled, Checked-In</value>
    </summaryFilterItems>
    <summaryForeignKey>Visit__c.Donor__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>