force-app/main/default/objects/Contact/fields/Last_SPE_Sample_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_SPE_Sample_Date__c</fullName>
    <description>Indicates the last date a donor had a SPE Sample. Updated from Visits with the SPE Sample checkbox checked.</description>
    <inlineHelpText>Indicates the last date a donor had a SPE Sample. Updated from Visits with the SPE Sample checkbox checked.</inlineHelpText>
    <label>Last SPE Sample Date</label>
    <type>Date</type>
</CustomField>