force-app/main/default/objects/Contact/fields/Last_Used_Center__c.field-meta.xml
<CustomField>
    <fullName>Last_Used_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field holds the last Donation Center that was scheduled by the Donor; for convenience.</description>
    <label>Last Used Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recent Donors</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>