force-app/main/default/objects/Contact/fields/Loyalty_Level__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loyalty Level</label>
    <referenceTo>Level__c</referenceTo>
    <relationshipLabel>Donors</relationshipLabel>
    <relationshipName>Donors</relationshipName>
    <type>Lookup</type>
</CustomField>