force-app/main/default/objects/Contact/fields/Migrated_Last_365_Day_Visit_Count__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Last_365_Day_Visit_Count__c</fullName>
    <description>This field captures the migrated donor&apos;s last 365 Day visit count upon migration.</description>
    <inlineHelpText>This field captures the migrated donor&apos;s last 365 Day visit count upon migration.</inlineHelpText>
    <label>Migrated Last 365 Day Visit Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>