force-app/main/default/objects/Contact/fields/National_Id__c.field-meta.xml
<CustomField>
    <fullName>National_Id__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <description>An encrypted unique identifier for a Donor e.g. US SSN, US DLN, MEX ID, CA ID are all valid values for this field, each with its own format.</description>
    <label>National Id</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>