force-app/main/default/objects/Contact/fields/Next_Visit__c.field-meta.xml
<CustomField>
    <fullName>Next_Visit__c</fullName>
    <description>The Next Visit for a Donor which uses a flattened Appointment slot datetime for this rollup for Scheduled Visits for a Donor. This is called &apos;Next Visit&apos; as opposed to &apos;Next Donation&apos; because we do not know if that Visit will result in a successfull Donation or not.</description>
    <label>Next Visit</label>
    <summarizedField>Visit__c.Appointment_Datetime__c</summarizedField>
    <summaryFilterItems>
        <field>Visit__c.Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </summaryFilterItems>
    <summaryForeignKey>Visit__c.Donor__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>