force-app/main/default/objects/Contact/fields/Next_Visit_Option_48hr__c.field-meta.xml
<CustomField>
    <fullName>Next_Visit_Option_48hr__c</fullName>
    <description>The next visit according to the 48 hour FDA rule</description>
    <formula>IF (OR(ISNULL(Last_Donation__c), ISNULL(Last_Scheduled_Visit__c)), 
   IF (ISNULL(Last_Donation__c),
      Last_Scheduled_Visit__c + 2,
      Last_Donation__c + 2
   ),
   FROMUNIXTIME(MAX(UNIXTIMESTAMP(Last_Donation__c + 2), UNIXTIMESTAMP(Last_Scheduled_Visit__c + 2)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The next visit according to the 48 hour FDA rule</inlineHelpText>
    <label>Next Visit Option 48hr</label>
    <type>DateTime</type>
</CustomField>