force-app/main/default/objects/Contact/fields/Next_Visit_Option_7d__c.field-meta.xml
<CustomField>
    <fullName>Next_Visit_Option_7d__c</fullName>
    <description>The next visit 7d past Previous to Last Visit</description>
    <formula>IF (OR(ISNULL(Last_Previous_Donation__r.Donation_Complete__c), ISNULL(Last_Previous_Scheduled_Visit__r.Appointment_Datetime__c)), 
   IF (ISNULL(Last_Previous_Donation__r.Donation_Complete__c),
      Last_Previous_Scheduled_Visit__r.Appointment_Datetime__c + 7,
      Last_Previous_Donation__r.Donation_Complete__c + 7
   ),
   FROMUNIXTIME(MAX(UNIXTIMESTAMP(Last_Previous_Donation__r.Donation_Complete__c + 7), UNIXTIMESTAMP(Last_Previous_Scheduled_Visit__r.Appointment_Datetime__c + 7)))
)</formula>
    <label>Next Visit Option 7d</label>
    <type>DateTime</type>
</CustomField>