force-app/main/default/objects/Contact/fields/Onbe_Balance__c.field-meta.xml
<CustomField>
    <fullName>Onbe_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The last received balance from Onbe, called and stored from the Mobile app.</description>
    <label>Onbe Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>