force-app/main/default/objects/Contact/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <description>Language from User setting; only exists for Contacts/PersonAccounts that have an associated User (Exp Cloud)</description>
    <formula>TEXT($User.LanguageLocaleKey)</formula>
    <label>Preferred Language</label>
    <type>Text</type>
</CustomField>