force-app/main/default/objects/Contact/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <description>The Firstname and Lastname are legal name, this field will capture their &apos;common&apos; firstname typically.</description>
    <inlineHelpText>What name to call them instead of legal name; may be the same e.g. Timothy -&gt; Tim</inlineHelpText>
    <label>Preferred Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>