force-app/main/default/objects/Contact/fields/Soonest_Next_Visit__c.field-meta.xml
<CustomField>
    <fullName>Soonest_Next_Visit__c</fullName>
    <description>The earliest another Visit can be scheduled after the last Donation.</description>
    <formula>FROMUNIXTIME( 
MAX ( 
    UNIXTIMESTAMP(  Eligibility_Date__c   ),
    UNIXTIMESTAMP(  BLANKVALUE( Next_Visit_Option_48hr__c, Eligibility_Date__c ) ),
    UNIXTIMESTAMP(  BLANKVALUE( Next_Visit_Option_7d__c, Eligibility_Date__c ) )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The earliest another Visit can be scheduled after the last Donation. The greater of Eligibility Date, 48h and 7d rules.</inlineHelpText>
    <label>Soonest Next Visit</label>
    <type>DateTime</type>
</CustomField>