force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <description>New: Transient state when record is first created
Registered: Are in the system as a potential donor
Verified: Has filled out basic profile information and have passed initial criteria
Applicant: Has an appointment to assess their fitness for donation
Eligible: Has met all criteria for donation and Eligiblity datetime is today or in the past
Deferred: Has met all critieria for donation and Eligibility datetime is in the future
Excluded: Can never* give plasma for various reasons that are PHI</description>
    <inlineHelpText>New: Transient state when record is first created
Registered: Are in the system as a potential donor
Verified: Has filled out basic profile information and have passed initial criteria
Applicant: Has an appointment to assess their fitness for donation
Eligible: Has met all criteria for donation and Eligiblity datetime is today or in the past
Deferred: Has met all critieria for donation and Eligibility datetime is in the future
Excluded: Can never* give plasma for various reasons that are PHI</inlineHelpText>
    <label>Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Donor_Status</valueSetName>
    </valueSet>
</CustomField>