force-app/main/default/objects/Contact/fields/Street_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Street_Line_2__c</fullName>
    <label>Street Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>