force-app/main/default/objects/Contact/fields/Total_Donations_32d__c.field-meta.xml
<CustomField>
    <fullName>Total_Donations_32d__c</fullName>
    <description>The total number of donations in a 32 day window</description>
    <label>Total Donations 32d</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>