force-app/main/default/objects/Contact/fields/Total_Donations_365d__c.field-meta.xml
<CustomField>
    <fullName>Total_Donations_365d__c</fullName>
    <description>Total number of donations in a year window</description>
    <label>Total Donations 365d</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>