force-app/main/default/objects/Contact/fields/Total_Donations__c.field-meta.xml
<CustomField>
    <fullName>Total_Donations__c</fullName>
    <description>Total number of Visits where a Donation was made</description>
    <inlineHelpText>Total number of Visits where a Donation was made</inlineHelpText>
    <label>Total Donations</label>
    <summaryFilterItems>
        <field>Visit__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Visit__c.Outcome__c</field>
        <operation>equals</operation>
        <value>Donation</value>
    </summaryFilterItems>
    <summaryForeignKey>Visit__c.Donor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>