force-app/main/default/objects/Contact/fields/Total_Future_Visits__c.field-meta.xml
<CustomField>
    <fullName>Total_Future_Visits__c</fullName>
    <description>All FUTURE Visits where the Donor is scheduled.</description>
    <inlineHelpText>All FUTURE Visits where the Donor is scheduled.</inlineHelpText>
    <label>Total Future Visits</label>
    <summaryFilterItems>
        <field>Visit__c.Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </summaryFilterItems>
    <summaryForeignKey>Visit__c.Donor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>