force-app/main/default/objects/Contact/fields/Total_Paid_Out__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Out__c</fullName>
    <description>The total currency paid to a Donor</description>
    <inlineHelpText>The total currency paid to a Donor</inlineHelpText>
    <label>Total Paid Out</label>
    <summarizedField>Transaction__c.Amount_Currency__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction__c.Type__c</field>
        <operation>equals</operation>
        <value>Credit</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.Donor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>