force-app/main/default/objects/Contact/fields/Total_Visits_32d__c.field-meta.xml
<CustomField>
    <fullName>Total_Visits_32d__c</fullName>
    <label>Total Visits 32d</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>