force-app/main/default/objects/Contact/fields/Total_Visits_365d__c.field-meta.xml
<CustomField>
    <fullName>Total_Visits_365d__c</fullName>
    <description>The total number of Visits for the prior year from today.</description>
    <label>Total Visits 365d</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>