force-app/main/default/objects/Contact/fields/Total_Visits__c.field-meta.xml
<CustomField>
    <fullName>Total_Visits__c</fullName>
    <description>All PAST Visits where the Donor showed up to the Center. Does not include no shows, cancellations or reschedules.</description>
    <inlineHelpText>All PAST Visits where the Donor showed up to the Center. Does not include no shows, cancellations or reschedules.</inlineHelpText>
    <label>Total Visits</label>
    <summaryFilterItems>
        <field>Visit__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Visit__c.Outcome__c</field>
        <operation>notEqual</operation>
        <value>No Show, Canceled, Rescheduled</value>
    </summaryFilterItems>
    <summaryForeignKey>Visit__c.Donor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>