force-app/main/default/objects/Contact/fields/Trianniversary_1__c.field-meta.xml
<CustomField>
    <fullName>Trianniversary_1__c</fullName>
    <description>The first trianniversary from First Visit Anniversary</description>
    <formula>ADDMONTHS( First_Visit_Anniversary__c , -8 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The first trianniversary from First Visit Anniversary</inlineHelpText>
    <label>Trianniversary 1</label>
    <type>Date</type>
</CustomField>