force-app/main/default/objects/Contact/fields/Trianniversary_2__c.field-meta.xml
<CustomField>
    <fullName>Trianniversary_2__c</fullName>
    <formula>ADDMONTHS( First_Visit_Anniversary__c , -4 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trianniversary 2</label>
    <type>Date</type>
</CustomField>