force-app/main/default/objects/Contact/fields/Verification_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Verification_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Verification Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>