force-app/main/default/objects/Contact/fields/Verification_Code_Time__c.field-meta.xml
<CustomField>
    <fullName>Verification_Code_Time__c</fullName>
    <label>Verification Code Time</label>
    <type>DateTime</type>
</CustomField>